// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store provider test suite first render 1`] = `
<div>
  plume
</div>
`;

exports[`store provider test suite store dispath change render 1`] = `
<div>
  plume++
</div>
`;
